Fix spacing

--- a/src/components/Timeline/Section/styles.module.css
+++ b/src/components/Timeline/Section/styles.module.css
@@ -2,7 +2,7 @@
   align-items: center;
   display: flex;
   flex-direction: column;
-  padding-bottom: 100px;
+  padding-bottom: 110px;
 }
 
 .month {
